--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "start": "node dist/index.js",
-    "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
+    "dev": "nodemon",
     "build": "tsc",
     "migrate": "npx prisma migrate dev",
     "seed": "npx prisma db seed",
@@ -36,6 +36,7 @@
     "@types/supertest": "^6.0.2",
     "@types/uuid": "^9.0.8",
     "jest": "^29.7.0",
+    "nodemon": "^3.1.10",
     "prisma": "^5.10.0",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.2",
